# anvel

./: .replit  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
src/: App.tsx  file_explore.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  routes.rs
src/components/: SideNav.tsx  TopNav.tsx  actions.ts.backup
src/pages/: Home.tsx
